Date: ???

  Features:
    - Launching rocket will add attack point for a randomly selected race or primary race of the surface. (default: ON)
    - Using super weapon will add attack point for a randomly selected race or primary race of the surface. (default: ON)

  Changes:
    - Improve custom attack handling
    - Refactor Cron scheduler
    - Refactor Race data upgrade for easier expansions

  Bugfixes:
    - Fix cooldown on enemy logistic bot

---------------------------------------------------------------------------------------------------
Version: 1.13.4
Date: 2022-02-11

  Change:
    - Added "spaceship" and "RTStasisRealm" surface to exclusion list.
    - map process queue and attack group indexer now ignore surfaces in exclusion list

  Bugfixes:
    - Fixed an issue where reinforced building recipes don't unlock on existing saves which have the tech researched.

---------------------------------------------------------------------------------------------------
Version: 1.13.3
Date: 2022-02-04

  Bugfixes:
    - Fixed improper minable and icon, which crash with boblogistic.
    - Fixed new pipe-to-ground entity fast replace group, which crash Krastorio 2.
    - Fixed a crash with Industrial evolution.

---------------------------------------------------------------------------------------------------
Version: 1.13.2
Date: 2022-02-02

  Bugfixes:
    - Forgot to disable debug mode once again lol.

---------------------------------------------------------------------------------------------------
Version: 1.13.1
Date: 2022-02-02

  Bugfixes:
    - Fixed a crash with aai-container icons incompatibility

---------------------------------------------------------------------------------------------------
Version: 1.13.0
Date: 2022-02-02

  Features:
    - Added reinforced structures for military.
    - Reinforced red belt / blue belt (3x health),
    - Reinforced fast inserters (3x),
    - Reinforced pipes (5x)
    - Reinforced medium pole (5x)