@@ -56,12 +56,6 @@ ErmConfig.RACE_MODE_PREFIX = 'erm_'
 
 ErmConfig.MAX_LEVELS = 20
 
-ErmConfig.enemy_races = {MOD_NAME}
-ErmConfig.enemy_races_loaded = false
-
-ErmConfig.installed_races = {MOD_NAME}
-ErmConfig.installed_races_loaded = false
-
 ErmConfig.CONFIG_CACHE_LENGTH = 5 * defines.time.minute
 ErmConfig.CONFIG_CACHE_SIZE = 256
 if DEBUG_MODE then
@@ -369,28 +363,60 @@ function ErmConfig.super_weapon_attack_points()
     return get_global_setting_value('enemyracemanager-super-weapon-attack-point')
 end
 
-function ErmConfig.get_enemy_races()
-    if #ErmConfig.enemy_races == 1 and ErmConfig.enemy_races_loaded == false then
+function ErmConfig.initialize_races_data()
+    global.installed_races = {MOD_NAME}
+    global.active_races = {[MOD_NAME] = true}
+    global.active_races_num = 1
+
+    for name, _ in pairs(game.active_mods) do
+        if String.find(name, ErmConfig.RACE_MODE_PREFIX, 1, true) and is_enemy_race(name) then
+            Table.insert(global.installed_races, name)
+        end
+    end
+
+    if ErmConfig.mapgen_is_2_races_split() then
+        global.active_races = {
+            [ErmConfig.positive_axis_race()] = true,
+            [ErmConfig.negative_axis_race()] = true
+        }
+        global.active_races_num = 2
+    elseif ErmConfig.mapgen_is_4_races_split() then
+        global.active_races = {
+            [ErmConfig.top_left_race()] = true,
+            [ErmConfig.top_right_race()] = true,
+            [ErmConfig.bottom_left_race()] = true,
+            [ErmConfig.bottom_right_race()] = true
+        }
+        global.active_races_num = 4
+    else
         for name, _ in pairs(game.active_mods) do
             if String.find(name, ErmConfig.RACE_MODE_PREFIX, 1, true) and is_enemy_race(name) then
-                Table.insert(ErmConfig.enemy_races, name)
+                global.active_races[name] = true
+                global.active_races_num = global.active_races_num + 1
             end
         end
-        ErmConfig.enemy_races_loaded = true;
     end
-    return ErmConfig.enemy_races
+
+    for key, _ in pairs(global.active_races) do
+        Table.insert(global.active_races_names, key)
+    end
 end
 
+function ErmConfig.get_enemy_races()
+    return global.active_races_names
+end
+
+function ErmConfig.get_enemy_races_total()
+    return global.active_races_num
+end
+
+function ErmConfig.race_is_active(race_name)
+    return global.active_races[race_name] == true
+end
+
+
 function ErmConfig.get_installed_races()
-    if #ErmConfig.installed_races == 1 and ErmConfig.installed_races_loaded == false then
-        for name, _ in pairs(game.active_mods) do
-            if String.find(name, ErmConfig.RACE_MODE_PREFIX, 1, true) then
-                Table.insert(ErmConfig.installed_races, name)
-            end
-        end
-        ErmConfig.installed_races_loaded = true;
-    end
-    return ErmConfig.installed_races
+    return global.installed_races
 end
 
 return ErmConfig
